--- a/src/css/controls/Fader.module.scss
+++ b/src/css/controls/Fader.module.scss
@@ -2,10 +2,16 @@
 @import "../../sass/mixins";
 @import "../../sass/custom";
 
+// $bg: rgba(13, 17, 21, 0.975);
+$bg: var(--bg1100);
+$accent: var(--accent);
+$hoverAccent: rgba(95, 23, 230, 0.2);
+
 :root {
 	--width: 4rem;
 	--height: 2.4rem;
 	--marginTop: calc(2.5rem / 2) - calc(4rem / 2);
+	--stripe: var(--accent);
 }
 
 /**
@@ -14,29 +20,29 @@
 */
 @mixin thumb() {
 	-webkit-appearance: none;
-	height: var(--height);
-	width: var(--width);
-	border-radius: 0.5rem;
-	background-color: var(--bg-editor);
-	border: 1px solid black;
-	// margin-top: -2rem;
-	margin-top: calc(2.28rem / 2) - calc(4rem / 2);
-	// fader styles
-	background: linear-gradient(
-		to left,
-		rgba(14, 14, 14, 1) 0%,
-		rgba(79, 79, 79, 1) 5%,
-		rgba(79, 79, 79, 1) 5%,
-		rgba(79, 79, 79, 1) 10%,
-		rgba(14, 14, 14, 1) 25%,
-		rgba(22, 22, 22, 1) 34%,
-		rgba(22, 22, 22, 1) 34%,
-		rgba(79, 79, 79, 1) 73%,
-		rgba(79, 79, 79, 1) 75%,
-		rgba(14, 14, 14, 1) 100%
+	appearance: none;
+	width: 20px;
+	height: 40px;
+	border-radius: 5px;
+	margin-top: -1.73rem;
+	border: 1px solid #000;
+	background-image: linear-gradient(
+		90deg,
+		$bg 25%,
+		$bg 44%,
+		var(--stripe) 20%,
+		var(--stripe) 24%,
+		var(--stripe) 26%,
+		$bg 65%,
+		$bg 70%
 	);
-	z-index: 10;
-	box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.5);
+	@include flex_row(center, center);
+	box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.75);
+
+	&:hover {
+		cursor: pointer;
+		box-shadow: 0px 0px 20px 3px $hoverAccent;
+	}
 }
 
 @mixin track() {
@@ -49,10 +55,8 @@
 }
 
 .Fader {
-	width: 10rem;
-	height: 100%;
-	min-height: 25rem;
-	// border: 1px solid #ccc;
+	width: 6rem;
+	height: fit-content;
 	border-radius: 0.5rem;
 	@include flex_col(flex-start, flex-start);
 
@@ -60,7 +64,6 @@
 		width: 100%;
 		height: 5rem;
 		text-align: center;
-		margin-bottom: 2rem;
 
 		&_label {
 			font-size: 1.6rem;
@@ -77,7 +80,6 @@
 		width: 100%;
 		height: 100%;
 		min-height: 15rem;
-		// height: calc(100% - 10rem);
 		@include flex_row(center, center);
 		z-index: 10;
 
@@ -87,15 +89,18 @@
 			width: 100%;
 			min-width: 18rem;
 			max-width: 100%;
-			height: 0.8rem;
+			height: 0.65rem;
 			border-radius: 5rem;
 
-			// Webkit (eg. Chrome) styles
+			// Webkit (eg. Chrome, Safari, Opera) styles
 			&::-webkit-slider-thumb {
-				position: relative;
+				appearance: none;
+				-webkit-appearance: none;
+				// position: relative;
 				z-index: 10;
 				@include thumb();
 			}
+			// Webkit (eg. Chrome, Safari, Opera) styles
 			&::-webkit-slider-runnable-track {
 				@include track();
 			}
@@ -103,6 +108,7 @@
 			&::-moz-range-thumb {
 				@include thumb();
 			}
+			// Firefox styles
 			&::-moz-range-track {
 				@include track();
 			}
@@ -123,41 +129,21 @@
 	}
 }
 
-.LeftTicks {
+$tickSize: 6px;
+
+.Ticks {
 	position: absolute;
-	top: -1.8rem;
-	left: 4.2rem;
-	width: auto;
-	height: 16rem;
-	max-height: 16rem;
-	@include flex_col(flex-start, flex-start);
-	z-index: 0;
-	& span {
-		margin-top: 0.01px;
-		color: rgb(30, 41, 59);
-	}
-	&_middle {
-		position: absolute;
-		top: 8.3rem;
-		left: -0.72rem;
-		color: var(--border);
-		width: 3rem;
-		min-width: 3rem;
-		border-bottom: 1px solid var(--border);
-	}
-}
-.RightTicks {
-	position: absolute;
-	top: -1.8rem;
-	right: 0;
-	left: 55%;
-	width: auto;
-	height: 16rem;
-	max-height: 16rem;
-	z-index: -1;
-	@include flex_col(flex-start, flex-start);
-	& span {
-		margin-top: 0.01px;
-		color: rgb(30, 41, 59);
+	width: 10px;
+	height: 100%;
+	min-height: 18rem;
+	@include flex_col(space-evenly, flex-start);
+	gap: 0.2rem 0;
+	margin-left: -0.3rem;
+	margin-top: -1rem;
+
+	&_tickMark {
+		border-bottom: 1px solid rgb(30, 41, 59);
+		width: 13px;
+		height: 100%;
 	}
 }
