--- a/src/css/synth/SynthBlackKey.module.scss
+++ b/src/css/synth/SynthBlackKey.module.scss
@@ -14,6 +14,9 @@
 	border: 1px solid var(--border);
 	@include flex_row(center, flex-end);
 	background-color: black;
+	user-select: none;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
 	z-index: 2;
 	&:hover {
 		cursor: pointer;
