--- a/src/css/controls/Fader.module.scss
+++ b/src/css/controls/Fader.module.scss
@@ -49,6 +49,7 @@ $hoverAccent: rgba(95, 23, 230, 0.2);
 	-webkit-appearance: none;
 	width: 100%;
 	height: 100%;
+
 	background-color: black;
 	border-radius: 5rem;
 	border: 1px solid var(--main-bg);
@@ -78,8 +79,8 @@ $hoverAccent: rgba(95, 23, 230, 0.2);
 	&_main {
 		position: relative;
 		width: 100%;
-		height: 100%;
 		min-height: 15rem;
+		max-height: 15rem;
 		@include flex_row(center, center);
 		z-index: 10;
 
@@ -138,7 +139,7 @@ $tickSize: 6px;
 	min-height: 18rem;
 	@include flex_col(space-evenly, flex-start);
 	gap: 0.2rem 0;
-	margin-left: -0.3rem;
+	margin-left: -0.2rem;
 	margin-top: -1rem;
 
 	&_tickMark {
