--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,35 @@
 .App {
-	width: 100vw;
-	height: 100vh;
-	max-width: 100%;
-	max-height: 100%;
-	padding: 4rem 2rem;
+	width: 100%;
+	height: 100%;
+	max-width: 100vw;
+	max-height: 100vh;
+
+	&_main {
+		width: 100%;
+		height: 100%;
+		max-width: 100%;
+		max-height: 100%;
+		overflow-x: hidden;
+		padding: 2rem 1rem;
+	}
+}
+
+h1 {
+	font-size: 2.5rem;
+	padding-left: 2rem;
+}
+
+@media only screen and (max-width: 700px) {
+	.App {
+		width: 100vw;
+		height: 100vh;
+		min-width: 100%;
+		min-height: 100%;
+		max-width: 100%;
+		max-height: 100%;
+
+		&_main {
+			padding: 2rem 1rem;
+		}
+	}
 }
