--- a/src/css/visuals/RackMount.module.scss
+++ b/src/css/visuals/RackMount.module.scss
@@ -112,15 +112,31 @@
 				color: #fff;
 			}
 		}
-		&_light {
-			width: 0.6rem;
-			height: 0.6rem;
-			margin-left: 0.5rem;
-			border-radius: 50%;
-			background-color: var(--accent-red);
-			box-shadow: -1px -1px 8px 2px rgba(237, 37, 78, 0.4);
-		}
 	}
+}
+
+.IndicatorLight {
+	position: relative;
+	width: 0.6rem;
+	height: 0.6rem;
+	margin-left: 0.5rem;
+	border-radius: 50%;
+	background-color: var(--accent-red);
+	z-index: 10;
+}
+.IndicatorLight2 {
+	position: absolute;
+	display: block;
+	top: 0;
+	left: 0;
+	width: 0.6rem;
+	height: 0.6rem;
+	border-radius: 50%;
+	background-color: var(--accent-red);
+	z-index: 100;
+}
+.ping {
+	@include ping();
 }
 
 [data-power="false"] {
