--- a/src/css/controls/MasterVolume.module.scss
+++ b/src/css/controls/MasterVolume.module.scss
@@ -2,28 +2,26 @@
 @import "../../sass/mixins";
 @import "../../sass/custom";
 
-.EffectBlock {
-	width: 20rem;
+.MasterVolume {
+	width: var(--synthyFXColumnWidth);
 	height: var(--synthyFXHeight);
 	padding: var(--synthyFXPadding);
-	padding-top: 2.5rem;
-	border-radius: 1rem;
 	border-color: var(--synthyBorder);
+	border-radius: 1rem;
+	@include flex_col(flex-start, center);
+	gap: 0 1rem;
 
 	& legend {
 		text-align: center;
 		font-size: 1.8rem;
+		border-color: var(--border);
 		color: var(--synthyFXLabel);
 		padding: 0 1rem;
 	}
 
 	&_main {
 		@include fill_container;
-		padding-top: 0.5rem;
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: repeat(3, 1fr);
-		place-items: center;
-		gap: 2rem 2rem;
+		@include flex_col(flex-start, center);
+		margin-top: -1.85rem;
 	}
 }
