--- a/src/css/controls/KnotchedKnob.module.scss
+++ b/src/css/controls/KnotchedKnob.module.scss
@@ -18,8 +18,9 @@
 		width: 100%;
 		@include flex_row(center, center);
 		margin-top: -0.3rem;
-		font-size: 1.2rem;
-		color: #000;
+		font-size: 1.4rem;
+		// color: #000;
+		color: var(--border);
 	}
 }
 
@@ -31,10 +32,14 @@
 	min-height: 5rem;
 	margin: 0.3rem 0.3rem;
 	border-radius: 50%;
-	background-color: var(--main-bg);
+	background-color: var(--synthyKnobColor);
 	border: 1px solid var(--border);
+	border: 1px solid var(--synthyKnobBorder);
 	transition: transform 0.3s ease-in-out;
 	z-index: 100;
+	&:hover {
+		cursor: pointer;
+	}
 
 	&_handle {
 		position: absolute;
