--- a/src/css/playground/UIPlayground.module.scss
+++ b/src/css/playground/UIPlayground.module.scss
@@ -16,6 +16,21 @@
 			max-height: 12rem;
 			max-width: 12rem;
 			@include flex_row(space-evenly, center, wrap);
+			margin-bottom: 4rem;
 		}
+	}
+}
+
+.Item {
+	width: 100%;
+	height: 100%;
+	@include flex_row(flex-start, center);
+
+	&_icon {
+		width: 1.4rem;
+		height: 1.4rem;
+		fill: var(--border);
+		margin-right: 1rem;
+		margin-top: 0.25rem;
 	}
 }
