--- a/src/sass/_animations.scss
+++ b/src/sass/_animations.scss
@@ -41,3 +41,18 @@
 @mixin ping() {
 	@extend .pulse;
 }
+
+.fadeIn {
+	animation: fade-in 0.5s;
+}
+@keyframes fade-in {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 100%;
+	}
+}
+@mixin fadeIn() {
+	@extend .fadeIn;
+}
