--- a/src/css/image-resizer/ImageResizer.module.scss
+++ b/src/css/image-resizer/ImageResizer.module.scss
@@ -14,12 +14,35 @@ $mask: rgba(0, 0, 0, 1);
 		overflow: hidden;
 		min-width: 70rem;
 		min-height: 50rem;
-		// opacity: 0.5;
 		z-index: 1;
 
 		&_mask {
 			z-index: 1;
 			@include fill_container;
 		}
+	}
+}
+
+.IconButton {
+	width: max-content;
+	height: max-content;
+	border-radius: 0.5rem;
+	padding: 0.8rem 1.2rem;
+	font-size: 1.6rem;
+	border: none;
+	outline: none;
+	@include flex_row(center, center);
+	gap: 0 0.2rem;
+	background-color: var(--accent-bright-red);
+	margin-top: 4rem;
+	&:hover {
+		cursor: pointer;
+	}
+
+	&_icon {
+		width: 1.5rem;
+		height: 1.5rem;
+		fill: #fff;
+		margin-right: 0.2rem;
 	}
 }
